# shoc

./: configure  configure.ac
config/: config.h.in
src/cuda/common/: cudapapi.cpp  cudapapi.h  main.cpp
src/cuda/level0/: BusSpeedDownload.cu  Makefile.am  Makefile.in
src/cuda/level0/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/: Makefile.in
src/cuda/level1/bfs/: Makefile.am  Makefile.in
src/cuda/level1/bfs/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/fft/: Makefile.am  Makefile.in
src/cuda/level1/fft/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/gemm/: Makefile.am  Makefile.in
src/cuda/level1/gemm/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/md/: Makefile.am  Makefile.in
src/cuda/level1/md/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/md5hash/: Makefile.am  Makefile.in
src/cuda/level1/md5hash/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/neuralnet/: Makefile.am  Makefile.in
src/cuda/level1/neuralnet/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/reduction/: Makefile.am  Makefile.in
src/cuda/level1/reduction/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/reduction/tpmpi/: Makefile.am  Makefile.in
src/cuda/level1/scan/: Makefile.am  Makefile.in
src/cuda/level1/scan/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/scan/tpmpi/: Makefile.am  Makefile.in
src/cuda/level1/sort/: Makefile.am  Makefile.in
src/cuda/level1/sort/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/spmv/: Makefile.am  Makefile.in
src/cuda/level1/spmv/epmpi/: Makefile.am  Makefile.in
src/cuda/level1/stencil2d/: Makefile.am  Makefile.in
src/cuda/level1/stencil2d/tpmpi/: Makefile.am  Makefile.in
src/cuda/level1/triad/: Makefile.am  Makefile.in  Triad.cu
src/cuda/level1/triad/epmpi/: Makefile.am  Makefile.in
src/cuda/level2/: Makefile.in
src/cuda/level2/qtclustering/: Makefile.am  Makefile.in
src/cuda/level2/qtclustering/tpmpi/: Makefile.am  Makefile.in
src/cuda/level2/s3d/: Makefile.am  Makefile.in
src/cuda/level2/s3d/epmpi/: Makefile.am  Makefile.in
src/mpi/contention-mt/cuda/: Makefile.am  Makefile.in
src/mpi/contention/cuda/: Makefile.am  Makefile.in
src/stability/: Makefile.am  Makefile.in
src/stability/epmpi/: Makefile.am  Makefile.in
